tests/golden/defaults/traefik/traefik/10_helmchart/traefik/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: 'true'
  labels:
    app.kubernetes.io/instance: traefik-syn-ingress-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-34.4.0
  name: traefik
spec:
  controller: traefik.io/ingress-controller
