tests/golden/defaults/traefik/traefik/10_helmchart/traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: traefik-syn-ingress-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-20.8.0
  name: traefik
  namespace: syn-ingress-traefik
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-syn-ingress-traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
